--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "boxicons": "^2.1.4",
-    "framer-motion": "^11.2.9",
+    "framer-motion": "^12.0.0-alpha.0",
+    "mongodb": "^6.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
