--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.5.2",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "appwrite": "^16.1.0",
     "boxicons": "^2.1.4",
     "framer-motion": "^12.0.0-alpha.0",
     "mongodb": "^6.7.0",
